# yacrd

./: .gitignore  Cargo.toml  Readme.md
src/: main.rs  util.rs
src/editor/: mod.rs
src/reads2ovl/: fullmemory.rs  mod.rs  ondisk.rs
tests/ondisk/: 007060ee-d814-fb82-21b9-04de973b9a72.yovl  00e16f6d-9b90-17fb-2a34-e63108688cc4.yovl  01fa4ab1-c1c5-15dc-7bd8-8395877685e0.yovl  031d2045-0a9a-4713-a691-00d7d6adf956.yovl  039814b4-d869-8451-51ed-da720f54a27c.yovl  03c1f21e-5744-bf5f-8198-f49205f69e16.yovl  0542789d-3b2e-6723-1253-6b96d47a8d31.yovl  074ef41b-b4d3-e9d5-fd9e-4345893ee99b.yovl  08aac06c-2806-9062-400e-9e710c939cda.yovl  0ddd04d8-551f-ad14-5276-029e8cc68bae.yovl  0f3dd054-6522-9e08-02ab-743eca685543.yovl  11235611-7e5a-ce96-1884-bb8b7621dbe1.yovl  156457da-b59c-ff3d-f5b8-3b6a326b6ea2.yovl  16d993d1-da01-7aac-621d-26f5344853f6.yovl  1896f495-9319-39ad-01f5-c3abdfb98d20.yovl  1a50a83a-af16-c83f-50c9-8c59bf40afa9.yovl  1e510d51-46ef-2d23-309f-cec9b73a4e24.yovl  1fcf02fe-5e56-6ee1-08d9-4e20a9036700.yovl  20253bc6-0849-2b8e-7a21-df6049effebf.yovl  20bd97c2-e899-de9a-8e35-312101c86d43.yovl  20c39bdf-ec3f-8838-91a8-20d67a200458.yovl  22035f1f-8e35-1385-edab-8b6acdb2f955.yovl  22e47240-895b-dc53-90c2-bc1e1e333f88.yovl  233af577-ca6b-6aa6-882e-89903b4ca372.yovl  23b3d863-0fa0-c5ef-df1c-f25e0391db5e.yovl  26a39a14-1f9c-533d-f3d8-f3978b30a95b.yovl  26d265d8-9243-b7d3-9491-3d5c1143515c.yovl  27c65604-947f-27a8-6a89-519c968cf160.yovl  280d5727-96bb-42a0-4103-d268ba433517.yovl  28be0a9e-b589-4448-96c1-69ba5528938d.yovl  28f134c8-4104-6a6d-4c17-cf501d920f7c.yovl  2a63b089-080b-ff64-150c-cddf3373e348.yovl  2b27c201-569e-2406-9213-e4cc3808fb12.yovl  2b34c06b-3f53-7207-3f97-5c3da622385f.yovl  (+195 more)
