[package]
name = "yacrd"
version = "0.6.1"
authors = ["Pierre Marijon <pierre.marijon@inria.fr>"]
edition = '2018'

exclude = ["image/*", "tests/*"]

description = "Using all-against-all read mapping, yacrd performs: computation of pile-up coverage for each read and detection of chimeras"
homepage = "https://github.com/natir/yacrd"
repository = "https://github.com/natir/yacrd"
readme = "Readme.md"
license = "MIT"
keywords = ["bioinformatics", "chimera", "long-read", "scrubbing"]

[dependencies]
bio             = "0.31"
csv             = "1"
log 	        = "0.4"
clap            = "3.0.0-beta.1"
anyhow          = "1"
niffler         = "2"
thiserror       = "1"
env_logger      = "0.7"
#jemallocator = "0.3.0"
# Disable secure mode of mimalloc, we aren't dealing with sensitive info
mimalloc        = { version = "0.1.19", default-features = false}
snap            = "1" # Snappy is a fast compression library
twox-hash       = "1.5.0"
thincollections = "0.5.0"
fs3             = "0.5.0"
crossbeam       = "0.7.3"
# This flate2 will backfire on me later... Needs a fallback...
flate2          = { version = "1.0.16", features = ["cloudflare_zlib"], default-features = false }
t1ha            = "0.1.0"
indicatif       = "0.15.0"
sled            = { version = "0.33", features = ["compression"] }
zerocopy        = "0.3.0"
byteorder       = "1.3.4"
bincode         = "1.3.1"
serde           = "1.0.114"
 
[dev-dependencies]
tempfile = "3.1"

[profile.release]
# debug = true # uncomment for profiling
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false

[[bin]]
name = "yacrd"
path = "src/main.rs"
